Try to fix chat overflow scroll

--- a/frontend/src/stylesheets/board.css
+++ b/frontend/src/stylesheets/board.css
@@ -199,7 +199,6 @@
     margin-top: 20px;
     height: 90%;
     width: 100%;
-    /* background-color: thistle; */
 }
 
 .leader-score {
@@ -271,19 +270,22 @@
     align-items: center;
     width: 30%;
     height: 90%;
+    max-height: 90%;
     margin: 80px 10px 0px 10px;
     background-color: rgb(64, 103, 136);
 }
 
 .chat-box {
-    display: flex;
+    /* display: flex;
+    flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items: center; */
     height: 80%;
     width: 95%;
     border-radius: 10px;
     margin: auto;
     background-color: rgba(68, 77, 85, 0.712);
+    overflow-y: scroll;
 }
 
 .chat-container {
@@ -293,25 +295,6 @@
     margin: auto;
     width: 95%;
     height: 15%;
-    /* background-color: tomato; */
-}
-
-.chat-input {
-    color: white;
-    border: rgba(96, 109, 121, 0.712) 2px solid;
-    background-color: slategray;
-    text-rendering: optimizelegibility;
-    font-family: 'Press Start 2P';
-    width: 90%;
-    height: 20%;
-    font-size: 14px;
-    line-height: 28px;  
-    border-radius: 8px; 
-    text-indent: 2%; 
-    padding: 20px; 
-    margin: 10px; 
-    border: 1px solid #E8E7E9;
-    text-align: start; 
 }
 
 .lower-button {
@@ -320,8 +303,12 @@
     font-size: 12px;
     width: 130px;
     height: 50px;
-    /* margin-left: auto;
-    margin-right: auto; */
+}
+
+#chat-content {
+    min-height: 0;
+    max-height: 95%;
+    overflow-y: scroll;
 }
 
 @media screen and (max-width: 1450px) {
@@ -337,7 +324,7 @@
     .chat {
         width: 95%;
         margin: 5px 10px 0px 10px;
-        height: 100%;
+        height: 315px;
         display: flex;
         justify-content: center;
     }
@@ -345,10 +332,6 @@
     .chat-box {
         width: 99%;
         margin: 5px;
-    }
-
-    .chat-container {
-        height: 1%;
     }
 
     .chat h2 {
@@ -435,7 +418,14 @@
         width: 95%;
         height: 75%;
         margin-top: 10px;
-        overflow: scroll;
+    }
+
+}
+
+@media screen and (max-height: 1000px) {
+
+    .game-wrapper, .board-wrapper {
+        overflow:scroll;
     }
 
 }
